--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,6 +2,7 @@
 <head>
     <link type="text/css" rel="stylesheet" href="styles.css">
     <script src="vendor.js"></script>
+    <script src="components.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
