--- a/src/vue/index.html
+++ b/src/vue/index.html
@@ -14,7 +14,7 @@
         </script>
     </head>
     <body>
-        <div id="app"></div>
+        <div class="column" id="app"></div>
     </body>
     <script src="/public/app.js"></script>
 </html>
