--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <link type="text/css" rel="stylesheet" href="/public/css/main.css">
     </head>
     <body>
-        <div class="wrapper column" id="app"></div>
+        <div id="app"></div>
     </body>
     <script>
         window.global = window
@@ -15,7 +15,7 @@
     {% if translations %}
     <script src="/public/js/i18n/{{translations}}.js"></script>
     {% endif %}
-    <script src="http://localhost/public/js/lib/vendor.js"></script>
+    <script src="/public/js/lib/vendor.js"></script>
     <script src="/public/js/lib/templates.js"></script>
     <script async src="/public/js/app.js"></script>
 </html>
