Changing to es modules.

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     </script>
     <!--TRANSLATIONS-->
     <script src="/public/js/lib/vendor.js" defer></script>
+    <script src="/public/js/lib/vendor.mjs" defer></script>
     <script src="/public/js/lib/templates.js" defer></script>
     <script src="/public/js/app.js" defer></script>
 </html>
