implemented a generic responseHandler for api calls and lowered the TTL for the cache of api calls

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   </script>
 
   <script>
-    window.voipgrid = { session: fetch('/api/v2/session', { credentials: 'same-origin' }).then(res => res.json()) };
+    window.voipgrid = { session: fetch('/api/v2/session', { credentials: 'same-origin' }) };
   </script>
 </head>
 <body>
